--- a/ASSIGNMENT-4_KARANPATEL.ipynb
+++ b/ASSIGNMENT-4_KARANPATEL.ipynb
@@ -1086,7 +1086,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "https://github.com/Karanpatel1511/Assignment-4-Machine-Learning"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1098,7 +1100,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "https://medium.com/@karanpatel5346/unraveling-data-mysteries-journey-into-k-means-clustering-97bd494bc975"
+   ]
   }
  ],
  "metadata": {
